fix: stretch panel header layout

--- a/styles/style.css
+++ b/styles/style.css
@@ -2664,7 +2664,7 @@ svg {
   padding: 0.875rem;
   margin-bottom: 0.25rem;
   position: relative;
-  background: url("../../../style_guide_2/img/profitRange/bg-top.png") 100% 100%/100% 100% no-repeat;
+  background: url("./../img/profitRange/bg-top.png") 100% 100%/100% 100% no-repeat;
 }
 .profit-range-header .logo {
   margin-bottom: 1.5rem;
@@ -2694,7 +2694,7 @@ svg {
 .profit-range-content {
   min-height: 15.3125rem;
   padding: 2rem 1rem;
-  background: url("../../../style_guide_2/img/profitRange/bg-top.png") 100% 100%/100% 100% no-repeat;
+  background: url("./../img/profitRange/bg-top.png") 100% 100%/100% 100% no-repeat;
 }
 .profit-range-content .line {
   display: flex;
@@ -2813,7 +2813,7 @@ svg {
 .section__stretch-panel .stretch-panel__content {
   background-color: #f2f4f7;
   min-height: 25rem;
-  margin: 0.375rem;
+  margin: 0 0.375rem 0.375rem;
   padding: 2.5rem 2.125rem;
 }
 .section__stretch-panel .stretch-panel__wrapper {
