--- a/template/modals/stretchPanel/_stretch-panel.scss
+++ b/template/modals/stretchPanel/_stretch-panel.scss
@@ -50,7 +50,7 @@
     &__content {
       background-color: #f2f4f7;
       min-height: 25rem;
-      margin: 0.375rem;
+      margin: 0 0.375rem 0.375rem;
       padding: 2.5rem 2.125rem;
     }
     &__wrapper {
